# paris-travel-time

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml  keepalive.yml  refresh-data.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/: csa.py  geo.py  network.py  walkgrid.py
backend/assets/: walkmask.npz
backend/ingest/: build_network.py  build_walkmask.py  download_gtfs.py  gtfs_calendar.py  gtfs_time.py
backend/scripts/: query_cli.py
backend/tests/: test_csa.py
frontend/: index.html  package-lock.json  package.json  smoke-anim.mjs  smoke-arrive.mjs  smoke-coldstart.mjs  smoke-delete.mjs  smoke-explainer.mjs  smoke-interactions.mjs  smoke-nomarker.mjs  smoke-prod.mjs  smoke-search.mjs  smoke-searchclick.mjs  smoke-seine.mjs  smoke-seine2.mjs  smoke.mjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlgoExplainer.tsx  BoundsSliders.tsx  CirclesLayer.tsx  ControlsPanel.tsx  IsochronesLayer.tsx  MapView.tsx  RoutePopup.tsx  SearchBox.tsx  StartMarkers.tsx
frontend/src/components/explainer/: Figures.tsx  ScanPlayer.tsx  toy.ts
frontend/src/hooks/: useTravelTime.ts
frontend/src/lib/: api.ts  colors.ts  time.ts  types.ts  urlState.ts  walkfield.ts
