[project]
name = "paris-travel-time-backend"
version = "0.1.0"
description = "Generic GTFS travel-time backend (CSA), built for Paris/IDFM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "numpy>=2.0,<2.3",
    "pandas>=2.2",
    "numba>=0.61",
    "orjson>=3.10",
    "pyarrow>=18.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
packages = ["app", "app.api", "app.core", "ingest", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
